# formowl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  RESOURCE_EXTRACTION_SPEC.md  SPEC.md  compose.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.devcontainer/: devcontainer.json
.formowl/kg-eval/: SESSION_RESTART.md  annotation_protocol_recovery.py  (+74 more)
docs/: agent-roles.md  architecture.md  closed-beta-runbook.md  implementation-task-breakdown.md  infra-spec.md  issue20-account-system-verification-status.md  issue20-oauth-evidence-runbook.md  kg-bert-runtime.md  kg-eval-package.md  kg-ontology-pretrained-model-explanation.md  kg-research-method.md  local-data-resource-inbox.md  mail-human-uat.md  mail-ontology-native-factorial-design.md  mail-preflight-readiness.md  mcp-boundaries.md  mcp-server-abstract.md  multimodal-ontology-term-extraction-decision.md  ontology-v2-coordination-frame-experiment.md  ontology-v2-coordination-frames.md  ontology-v2-coordination-plan.md  ontology-v2-review-comments.md  openproject-adapter.md  provenance.md  wiki-draft-schema.md  workflows.md
docs/archive/: README.md
examples/: context-package.json  generated-adr.md  ontology-v2-cross-domain-email-cases.json  wiki-draft-input.json
scripts/: closed_beta_smoke.py  connected_operator_postgres_live_journey.py  connected_runtime_container_lifecycle_probe.py  connected_runtime_postgres_live_e2e.py  graph_resolution_package_adapters_smoke.py  issue20_containerized_evidence_runner.sh  issue20_runner_boundary.py  kg_first_cross_resource_smoke.py  kg_research_acceptance_suite.py  mail_evidence_chatgpt_result_intake.py  mail_evidence_mcp_smoke.py  mail_full_pst_100_case_eval.py  mail_full_pst_chatgpt_mcp_50000_eval.py  mail_full_pst_domain_hard_case_eval.py  mail_full_pst_domain_hard_kg_fusion_eval.py  mail_full_pst_domain_hard_ontology_ablation_eval.py  mail_full_pst_domain_hard_ontology_factorial_eval.py  mail_full_pst_exm_lexical_ontology_eval.py  mail_human_uat.py  mail_human_uat_codex_engine.py  mail_real_pst_smoke.py  mail_upload_chatgpt_connection_preflight.py  mail_upload_chatgpt_result_intake.py  mail_upload_mcp_command_smoke.py  mail_upload_mcp_http_import_smoke.py  mail_upload_mcp_http_smoke.py  oauth_mcp_harness.py  ontology_v2_coordination_frame_experiment.py  pgvector_repository_live_smoke.py  pgvector_repository_live_smoke_container.sh  postgres_container_harness.sh  postgres_transaction_rollback_live_smoke.py  postgres_transaction_rollback_live_smoke_container.sh  precommit_checks.py  production_adapter_stack_smoke.py  real_pst_domain_hard_100_lock.py  real_pst_domain_hard_100_rebuild.py
tests/: _paths.py  _semantic_gateway_scenarios.py  issue20_capability_bounding_set_probe.py  issue20_function_harness_manifest.json  oauth_harness.py  run_issue20_capability_bounding_set_live_regression.sh  test_audio_extraction.py  test_audit_logging.py  test_candidate_assertion_contract.py  test_candidate_contract.py  test_candidate_evidence_hardness.py  test_candidate_evidence_harness_onboarding.py  test_candidate_extraction.py  test_candidate_generation_capabilities.py  test_candidate_knowledge_pipeline.py  test_candidate_preview.py  test_candidate_retrieval.py  test_candidate_temporal_view.py  test_canonical_commit_workflow.py  test_canonical_contract.py  test_canonical_lifecycle.py  test_chatgpt_session_capture.py  test_closed_beta_smoke_script.py  test_codex_unix_socket_proxy.py  test_connected_container_entrypoint.py  test_connected_operator_directory.py  test_connected_operator_postgres_live_journey.py  test_connected_runtime.py  test_connected_runtime_container.py  test_connected_runtime_postgres_live_e2e.py  test_connected_secret_init.py  test_contract.py  test_contract_edge_cases.py  test_coordination_frame_contract.py  test_coordination_frame_experiment.py  test_coordination_frame_extraction.py  test_database_backed_ingestion_workflow.py  test_docker_build_context_secrets.py  test_document_extraction.py  test_durable_archive_integrity.py  (+112 more)
(+319 files in other folders)
