[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "formowl"
version = "0.1.0"
description = "Source-preserving knowledge management MCP servers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "jieba>=0.42.1,<0.43",
  "pre-commit>=4.0",
  "ruff==0.8.6",
  "sentencepiece>=0.2,<0.3"
]
graph-adapters = [
  "rapidfuzz>=3.14,<4",
  "splink>=4,<5"
]
mail-experiments = [
  "jieba>=0.42.1,<0.43",
  "sentencepiece>=0.2,<0.3"
]

[project.scripts]
formowl-kg-eval = "formowl_kg_eval.cli:main"
formowl-semantic-mcp-jsonrpc = "formowl_gateway.cli:main"
formowl-project-mcp-jsonline-compat = "formowl_project_mcp.server:main"
formowl-wiki-mcp-jsonline-compat = "formowl_wiki_mcp.server:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.coverage.run]
branch = true
source = [
  "python"
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = [
  "python",
  "tests"
]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F"
]
