[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "formowl"
version = "0.1.0"
description = "Source-preserving knowledge management MCP servers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Authlib>=1.6,<2",
  "cryptography>=44,<47",
  "httpx>=0.28,<1",
  "mcp==1.28.1",
  "psycopg[binary]>=3.2,<4",
  "starlette>=0.37,<1",
  "uvicorn>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "jieba>=0.42.1,<0.43",
  "pre-commit>=4.0",
  "ruff==0.8.6",
  "sentencepiece>=0.2,<0.3"
]
graph-adapters = [
  "rapidfuzz>=3.14,<4",
  "splink>=4,<5"
]
mail-experiments = [
  "jieba>=0.42.1,<0.43",
  "sentencepiece>=0.2,<0.3"
]

[project.scripts]
formowl-container-entrypoint = "formowl_gateway.container_entrypoint:main"
formowl-connected-mcp = "formowl_gateway.runtime:main"
formowl-issue20-evidence = "formowl_evidence.issue20_packet:main"
formowl-kg-eval = "formowl_kg_eval.cli:main"
formowl-semantic-mcp-jsonrpc = "formowl_gateway.cli:main"
formowl-project-mcp-jsonline-compat = "formowl_project_mcp.server:main"
formowl-wiki-mcp-jsonline-compat = "formowl_wiki_mcp.server:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
"formowl_graph.storage" = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.coverage.run]
branch = true
source = [
  "python"
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = [
  "python",
  "tests"
]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F"
]
